package com.creational.abstractfactory.exercise1;

//Represents an abstract product
public interface Storage {

    String getId();

}
